fix(with-without): fixing content overflow

--- a/packages/components/bolt-with-without/with-without.scss
+++ b/packages/components/bolt-with-without/with-without.scss
@@ -17,25 +17,36 @@ $bolt-medium-icon-half-size: 12px;
 $pega-wwo--sm-circle-top-margin--mobile: $bolt-medium-icon-half-size - ($pega-wwo--sm-circle-size / 2);
 
 .c-pega-wwo {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   line-height: 1.4;
   background-color: black;
+  position: relative;
+
+  @include bolt-mq($from: xlarge) {
+    height: 0;
+    // Scale bg image by width padding is relative to width. So this is an aspect ratio hack.
+    // In desktop, all content is floated over this div and containers are 100%
+    padding-bottom: $pega-wwo--desktop-ratio;
+  }
 
   bolt-animate {
+    // This is to detect invisible elements so as not to trigger anims on them.
     min-width: 1px;
     min-height: 1px;
   }
 
   &__wrapper {
+    width: 100%;
+    height: 100%;
 
+    @include bolt-mq($from: xlarge) {
+      // This div scales to full with of padding-hacked wrapper.
+      position: absolute;
+    }
   }
 
-  &__inner {
-    position: relative;
-  }
-
-
+  // This wrapper is the animate component and establishes z-index outside shadow dom wrapping.
   &__modal-bg--wrapper {
     position: absolute;
     top: 0;
@@ -45,14 +56,37 @@ $pega-wwo--sm-circle-top-margin--mobile: $bolt-medium-icon-half-size - ($pega-ww
     height: 3000px;
   }
 
+  // The full-screen modal that fades out on anim
   &__modal-bg {
     position: absolute;
+    z-index: 99999;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     pointer-events: none;
-    background-color: bolt-color(black);
+    background-color: black;
+  }
+
+  &__swiper-container-wrapper {
+    // On mobile, this gets height from handleResize().
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+  }
+
+  // This 100% w/h stuff is to to ensure full width through all divs. Gross.
+  &__swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__swiper-wrapper {
+    width: 100%;
+    height: 100%;
   }
 
   &__title-and-toggle--wrapper {
@@ -77,6 +111,7 @@ $pega-wwo--sm-circle-top-margin--mobile: $bolt-medium-icon-half-size - ($pega-ww
       position: absolute;
     }
 
+    // This simple switch css is bad. The switch looked good at first blush but is an ugly component and hard to theme.
     ._simple-switch-track {
       display: inline;
       position: absolute;
@@ -120,6 +155,7 @@ $pega-wwo--sm-circle-top-margin--mobile: $bolt-medium-icon-half-size - ($pega-ww
       }
     }
 
+    // Labels are abs pos over switch.
     &-labels {
       display: flex;
       flex-wrap: nowrap;
@@ -156,42 +192,14 @@ $pega-wwo--sm-circle-top-margin--mobile: $bolt-medium-icon-half-size - ($pega-ww
     }
   }
 
-
-  &__swiper-container-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-  }
-
-  &__swiper-container {
-    width: 100vw;
-  }
-
-  &__swiper-wrapper {
-    width: 100%;
-    height: 100%;
-  }
-
-  //&__swiper-slide {
-  //  flex: 0 0 auto;
-  //}
-
+  // see handleResize. Height on mobile is used to set height of slide c-pega-wwo__swiper-container-wrapper
   &__content {
     width: 100%;
-
-    @include bolt-mq($from: xlarge) {
-      position: relative;
-      height: 0;
-      // Scale bg image by width Padding is relative to width. So this is an aspect ratio hack.
-      padding-bottom: $pega-wwo--desktop-ratio;
-    }
   }
 
+  // Mobile top padding is set in handleResize
   &__content--inner {
     display: flex;
-    // Scale bg image by width Padding is relative to width. So this is an aspect ratio hack.
-    position: relative;
     z-index: 1;
     max-width: $pega-wwo--content-max-mobile-width;
     margin: 0 auto;
@@ -218,7 +226,7 @@ $pega-wwo--sm-circle-top-margin--mobile: $bolt-medium-icon-half-size - ($pega-ww
     position: absolute;
     top: 0;
     bottom: 0;
-    z-index: 0;
+    z-index: -1;
     width: 100%;
     height: 100%;
     background-color: black;
